AoC16 Point refactoring